--- a/01.spring batch summary/02.스프링 배치 실습(1).md
+++ b/01.spring batch summary/02.스프링 배치 실습(1).md
@@ -1,6 +1,5 @@
 # 스프링 배치 실습(1)
 
-
 ## 스프링 배치 실습 환경
 이제 스프링 배치를 위해 실습을 시작해보자. 실습을 위한 환경은 다음과 같다.
 
@@ -174,3 +173,65 @@ test {
     - JOB_EXECUTION와 JOB_INSTANCE는 부모-자식 관계이다.
 
     - 자신의 부모 JOB_INSTACNE가 성공/실패했던 모든 내역을 갖고 있다.
+
+    <br><br>
+
+## Spring Batch Job Flow
+
+- BatchStatus
+
+  - Job 또는 Step의 실행 결과를 Spring에 기록할 때 사용 
+
+- ExitStatus
+
+  - Step의 실행 후 상태
+
+<br><br>
+
+## Scope
+
+- @StepScope
+
+  - Tasklet이나 ItemReader, ItemWriter, ItemProcessor에서 사용 가능
+
+  - Step의 실행시점에 해당 컴포넌트를 Spring Bean으로 생성
+ 
+- @JobScope
+
+  - Step 선언문에서 사용 가능
+
+  - Job 실행시점에 Bean이 생성
+
+- Bean 생성 시점을 애플리케이션 실행 시점이 아니라 Job or Step으로 지연 시키면 다음과 같은 장점이 있다.
+
+  - JobParameter의 Late Binding이 가능하다.
+
+  - 동일한 컴포넌트를 병렬 혹은 동시에 사용시 유용
+
+- Job Parameters
+
+  - Scope Bean을 생성할때만 가능
+
+  - Spring Batch는 같은 JobParameter로 같은 Job을 두번 실행하지 않는다.
+
+    - 시스템 변수 사용시 메타 테이블이 전혀 관리되지않는다.
+
+  - Late Binding을 사용할 수 있다.
+
+  - 그렇기에 시스템 변수보다는 JobParameters 사용하는게 유용하다.
+
+<br><br>
+
+## Chunk
+
+Chunk란 데이터 덩어리로 작업 할 때 각 커밋 사이에 처리되는 row 수를 이야기한다.
+
+즉, Chunk 지향 처리란 한 번에 하나씩 데이터를 읽어 Chunk라는 덩어리를 만든 뒤, Chunk 단위로 트랜잭션을 다루는 것을 의미한다.
+
+- Page Size VS Chunk Size
+
+  - 2개의 값이 의미하는 바가 다르지만 보편적으로 2개의 값을 일치시키는 것이 성능적으로 좋다.
+
+  - Page Size : 한번에 조회할 Item의 양
+
+  - Chunk Size : 한번에 처리될 트랜잭션 단위
